src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>SomTV_AktuellsteProSediId__c</fullName>
        <description>Liefert die zugeordnete ProSedi ID für den aktuellen Account. Bei mehreren ProSedi Ids wird die aktuellste (höchste) ausgegeben.</description>
        <inlineHelpText>Liefert die zugeordnete ProSedi ID für den aktuellen Account. Bei mehreren ProSedi Ids wird die aktuellste (höchste) ausgegeben.</inlineHelpText>
        <label>Aktuellste ProSedi ID</label>
        <summarizedField>P7S1_ExternalId__c.ExtIdProSedi__c</summarizedField>
        <summaryFilterItems>
            <field>P7S1_ExternalId__c.P7S1_Source__c</field>
            <operation>equals</operation>
            <value>ProSa/ProSedi</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_ExternalId__c.P7S1_Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_AccountEMail__c</fullName>
        <description>allgemein gültige E-Mail Adresse des Unternehmens, wie z.B. info@musterfirma.de</description>
        <inlineHelpText>allgemein gültige E-Mail Adresse des Unternehmens, wie z.B. info@musterfirma.de</inlineHelpText>
        <label>Account E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SomTv_Accounttypen__c</fullName>
        <inlineHelpText>Beschreibt den TV Kundentyp</inlineHelpText>
        <label>Kundenart TV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agentur</fullName>
                </value>
                <value>
                    <fullName>Agenturverbund</fullName>
                </value>
                <value>
                    <fullName>Bestandskunde 2017</fullName>
                </value>
                <value>
                    <fullName>kein Werbetreibender</fullName>
                </value>
                <value>
                    <fullName>nicht relevant 71M Sales D</fullName>
                </value>
                <value>
                    <fullName>Non-P7S1 Bestand 2017</fullName>
                </value>
                <value>
                    <fullName>Non-P7S1 Neugeschäft 2017</fullName>
                </value>
                <value>
                    <fullName>Non-TV Bestand 2017</fullName>
                </value>
                <value>
                    <fullName>Non-TV Neugeschäft 2017</fullName>
                </value>
                <value>
                    <fullName>Winback 2017</fullName>
                </value>
                <value>
                    <fullName>Konzern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_AdF_Typ__c</fullName>
        <inlineHelpText>Hier wird der Kundentyp der Adfactory ausgewählt.</inlineHelpText>
        <label>AdF Typ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DESIRE</fullName>
                </value>
                <value>
                    <fullName>DEVELOP</fullName>
                </value>
                <value>
                    <fullName>DEFEND</fullName>
                </value>
                <value>
                    <fullName>DOUBT</fullName>
                </value>
                <value>
                    <fullName>keine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_AktuellerForecastTV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link zum aktuellen Forecacst TV</description>
        <inlineHelpText>Link zum aktuellen Forecacst TV</inlineHelpText>
        <label>Aktueller Forecast TV</label>
        <referenceTo>SomTv_ForecastTV__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AnforderungDebitorennummernCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bei Anforderung einer Debitorennummer bitte aktivieren.</description>
        <inlineHelpText>Bei Anforderung einer Debitorennummer bitte aktivieren.</inlineHelpText>
        <label>Anforderung Debitorennummer(n)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_AnforderungProSediIds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>für CRM-Sales, Haken gesetzt = IDs sind angefordert</description>
        <inlineHelpText>für CRM-Sales, Haken gesetzt = IDs sind angefordert</inlineHelpText>
        <label>Anforderung ProSedi-IDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Anforderung_Debitorennummer_n__c</fullName>
        <description>für CRM-Sales, Status Debitorennummer(n)</description>
        <inlineHelpText>für CRM-Sales, Status Debitorennummer(n)</inlineHelpText>
        <label>Status Anforderung Debitorennummer(n)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>benötigt</fullName>
                </value>
                <value>
                    <fullName>angefordert</fullName>
                </value>
                <value>
                    <fullName>hinterlegt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_AnzahlProSaProSediIds__c</fullName>
        <description>Gibt die Anzahl der ProSa und ProSedi Ids des Accounts aus</description>
        <inlineHelpText>Gibt die Anzahl der ProSa und ProSedi Ids des Accounts aus</inlineHelpText>
        <label>Anzahl ProSa ProSedi Ids</label>
        <summaryFilterItems>
            <field>P7S1_ExternalId__c.P7S1_Source__c</field>
            <operation>equals</operation>
            <value>ProSa/ProSedi</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_ExternalId__c.P7S1_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_BranchenAT__c</fullName>
        <description>Auswahl der Branche in Österreich gem. CRMSALES-447</description>
        <inlineHelpText>Auswahl der Branche in Österreich</inlineHelpText>
        <label>Branchen AT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aus- und Weiterbildung</fullName>
                </value>
                <value>
                    <fullName>Autoindustrie</fullName>
                </value>
                <value>
                    <fullName>Finanzwesen (Banken, Versicherungen, etc,)</fullName>
                </value>
                <value>
                    <fullName>Bauwirtschaft (Baumärkte, Gartenausstattung, Sanitär, Möbelhäuser, etc.)</fullName>
                </value>
                <value>
                    <fullName>Bekleidungsindustrie</fullName>
                </value>
                <value>
                    <fullName>Bürobedarf</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>EDV</fullName>
                </value>
                <value>
                    <fullName>Elektroindustrie</fullName>
                </value>
                <value>
                    <fullName>Energie</fullName>
                </value>
                <value>
                    <fullName>Erotik</fullName>
                </value>
                <value>
                    <fullName>Getränkeindustrie</fullName>
                </value>
                <value>
                    <fullName>Kosmetik</fullName>
                </value>
                <value>
                    <fullName>Kultur</fullName>
                </value>
                <value>
                    <fullName>Lebensmittelindustrie</fullName>
                </value>
                <value>
                    <fullName>Musik-/Filmindustrie</fullName>
                </value>
                <value>
                    <fullName>Optik</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Printmedien</fullName>
                </value>
                <value>
                    <fullName>Spielwaren</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Tourismus</fullName>
                </value>
                <value>
                    <fullName>Vereine</fullName>
                </value>
                <value>
                    <fullName>Verkehrsmittel</fullName>
                </value>
                <value>
                    <fullName>Wettanbieter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_Buchungskreis__c</fullName>
        <description>für CRM-Sales; Dieses Feld ist notwendig, um die Tochterfirma der P7S1 Media AG für die Anforderung der Debitorennummer anzugeben</description>
        <inlineHelpText>für CRM-Sales; Dieses Feld ist notwendig, um die Tochterfirma der P7S1 Media AG für die Anforderung der Debitorennummer anzugeben</inlineHelpText>
        <label>Buchungskreis</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0011 ProSieben Television GmbH</fullName>
                </value>
                <value>
                    <fullName>0012 Kabel 1  K1 Fernsehen GmbH</fullName>
                </value>
                <value>
                    <fullName>0029 ProSiebenSat.1 Digital GmbH</fullName>
                </value>
                <value>
                    <fullName>0051 SevenOne Media GmbH</fullName>
                </value>
                <value>
                    <fullName>0063 SevenOne Brands GmbH</fullName>
                </value>
                <value>
                    <fullName>0064 SevenOne AdFactory GmbH</fullName>
                </value>
                <value>
                    <fullName>0065 SIXX GmbH</fullName>
                </value>
                <value>
                    <fullName>0072 TVD GmbH (S1 Gold, P7 Maxx)</fullName>
                </value>
                <value>
                    <fullName>0200 Sat.1 Satelliten Fernsehen GmbH</fullName>
                </value>
                <value>
                    <fullName>0230 Sat.1 (Schweiz)</fullName>
                </value>
                <value>
                    <fullName>0231 Sat.1 Austria Wien</fullName>
                </value>
                <value>
                    <fullName>0232 AUSTRIA 9 TV GmbH</fullName>
                </value>
                <value>
                    <fullName>0320 SevenOneMedia Schweiz AG</fullName>
                </value>
                <value>
                    <fullName>0321 ProSieben (Schweiz) AG</fullName>
                </value>
                <value>
                    <fullName>0340 SevenOneMedia Austria  GmbH</fullName>
                </value>
                <value>
                    <fullName>0341 ProSieben Austria GmbH</fullName>
                </value>
                <value>
                    <fullName>0342 PULS CITY TV GmbH</fullName>
                </value>
                <value>
                    <fullName>0346 PULS 4 TV GmbH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_CleanUpFrom__c</fullName>
        <description>Benutzer, der das &quot;behalten&quot; angefordert hat.</description>
        <inlineHelpText>Benutzer, der das &quot;behalten&quot; angefordert hat.</inlineHelpText>
        <label>behalten (von)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_CleanUpKeep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account-Bereinigung 04/2015: soll nicht gelöscht werden.</description>
        <inlineHelpText>Account-Bereinigung 04/2015: soll nicht gelöscht werden.</inlineHelpText>
        <label>behalten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_CleanUp_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account-Bereinigung 04/2015: soll gelöscht werden (Vorschlag)</description>
        <inlineHelpText>Account-Bereinigung 04/2015: soll gelöscht werden (Vorschlag)</inlineHelpText>
        <label>soll gelöscht werden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_ComplianceRichtlinieVorhanden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichnung des Vorhandenseins von Compliance Richtlinie</description>
        <inlineHelpText>Kennzeichnung des Vorhandenseins von Compliance Richtlinie</inlineHelpText>
        <label>Compliance Richtlinie vorhanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Conversion_Typ__c</fullName>
        <description>Definition des Kundenstatus</description>
        <inlineHelpText>Hier hast Du die Möglichkeit, jeden Kunden dem jeweiligen Thema zuzuordnen. Beispiel: ein Kunde hat nur ein Teletextangebot erhalten = potentieller &quot;TXT Kunde&quot;.</inlineHelpText>
        <label>Conversion Typ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>potentieller TXT Kunde</fullName>
                </value>
                <value>
                    <fullName>Bestandskunde TXT</fullName>
                </value>
                <value>
                    <fullName>potentieller DRTV Kunde</fullName>
                </value>
                <value>
                    <fullName>Bestandskunde DRTV</fullName>
                </value>
                <value>
                    <fullName>CPO Kunde</fullName>
                </value>
                <value>
                    <fullName>Gegengeschäft</fullName>
                </value>
                <value>
                    <fullName>Bestandskunde Infomercial</fullName>
                </value>
                <value>
                    <fullName>potentieller Infomercial Kunde</fullName>
                </value>
                <value>
                    <fullName>Non Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_CreateForecastTV__c</fullName>
        <description>Link zum Erstellen eines neuen Forecast TV für das aktuelle Jahr - wird nur für Admin und 71M TV Sales angezeigt, sonst Hinweistext</description>
        <formula>IF ( AND ( $User.ProfileId != &apos;00e20000000lfOj&apos; , $User.ProfileId != &apos;00eD0000001QoiV&apos;) , &apos;Erstellt und pflegt TV Sales&apos; ,
HYPERLINK ( &apos;/a4E/e&apos;
&amp; &apos;?Name=&apos; &amp; &apos;wird+automatisch+gefuellt&apos;
&amp; &apos;&amp;00N57000006I8MD=&apos; &amp; TEXT ( YEAR( TODAY() ) )
&amp; &apos;&amp;retURL=%2F&apos; &amp; Id
&amp; &apos;&amp;CF00N57000006I8M2_lkid=&apos; &amp; Id
&amp; &apos;&amp;CF00N57000006I8M2=&apos; &amp; Name
&amp; &apos;&amp;CF00N570000063Wta_lkid=&apos; &amp; IF ( ISBLANK( P7S1_RelevantAgency__c ) , &quot;&quot; , P7S1_RelevantAgency__c )
&amp; &apos;&amp;CF00N570000063Wta=&apos; &amp; IF ( ISBLANK( P7S1_RelevantAgency__c ) , &quot;&quot; , P7S1_RelevantAgency__r.Name )
&amp; &apos;&amp;nooverride=&apos; &amp; &apos;true&apos;
,
&apos;Erstelle Forecast TV für &apos; &amp; TEXT ( YEAR( TODAY() ) ) ,
&apos;_blank&apos;
)
)</formula>
        <inlineHelpText>Link für TV Sales zum Erstellen eines neuen Forecast TV für das aktuelle Jahr</inlineHelpText>
        <label>Erstelle Forecast TV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_DebCheckerEmailVersendet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hilfsfeld für WF &quot; SomTv_AccNameDebNummerExistiert &quot;. &quot;AccountTrigger&quot; setzt diesen Flag, wenn Accountname geändert wurde und Som_Quelle__c = DebitorenNr &amp;&amp; Som_ExterneID__c gefüllt ist.</description>
        <inlineHelpText>Hilfsfeld für WF &quot; SomTv_AccNameDebNummerExistiert &quot;. &quot;AccountTrigger&quot; setzt diesen Flag, wenn Accountname geändert wurde und Som_Quelle__c = DebitorenNr &amp;&amp; Som_ExterneID__c gefüllt ist.</inlineHelpText>
        <label>DebitorennummerCheckerEmailVersendet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_DebitorennummerChecker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hilfsfeld für WF &quot; SomTv_AccNameDebNummerExistiert &quot;. &quot;AccountTrigger&quot; setzt diesen Flag, wenn Accountname geändert wurde und Som_Quelle__c = DebitorenNr &amp;&amp; Som_ExterneID__c gefüllt ist.
Wenn hier = True, dann wird Email an Debitorennummer versendet</description>
        <inlineHelpText>Hilfsfeld für WF &quot; SomTv_AccNameDebNummerExistiert &quot;. &quot;AccountTrigger&quot; setzt diesen Flag, wenn Accountname geändert wurde und Som_Quelle__c = DebitorenNr &amp;&amp; Som_ExterneID__c gefüllt ist.</inlineHelpText>
        <label>DebitorennummerChecker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_FirmeninhaberNachname__c</fullName>
        <description>Wenn Rechtsform = Einzelunternehmen, dann sind Vor.- und Nachname des Firmeninhabers zwingend.</description>
        <inlineHelpText>Wenn Rechtsform = Einzelunternehmen, dann sind Vor.- und Nachname des Firmeninhabers zwingend.</inlineHelpText>
        <label>Firmeninhaber Nachname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_FirmeninhaberVorname__c</fullName>
        <description>Wenn Rechtsform = Einzelunternehmen, dann sind Vor.- und Nachname des Firmeninhabers zwingend.</description>
        <inlineHelpText>Wenn Rechtsform = Einzelunternehmen, dann sind Vor.- und Nachname des Firmeninhabers zwingend.</inlineHelpText>
        <label>Firmeninhaber Vorname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_ForecastDifferenzKernsender__c</fullName>
        <description>Zeigt die Differenz des Forecast TV zu den aktuellen Opportunities des laufenden Jahres für die Kernsender an.
Forecast TV - Opportunities</description>
        <formula>SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c



/***** Darstellung der Summe inkl. Tausender Trennzeichen

IF(ABS( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c ) &lt; 1000, TEXT(( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c )),
  IF(ABS( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c ) &lt; 1000000, TEXT(FLOOR(( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c )/1000)) &amp; &apos;.&apos; &amp; RIGHT(TEXT(( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c )), 3),
    IF(ABS( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c ) &lt; 1000000000, TEXT(FLOOR(( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c )/1000000)) &amp; &apos;.&apos; &amp; TEXT(FLOOR(MOD(( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c ),1000000)/1000)) &amp; &apos;.&apos; &amp; RIGHT(TEXT(( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c )), 3), TEXT(( SomTv_PrognoseGesamt__c - SomTv_OpptiAJGesamt__c )))
  )
)

+ &apos;,00&apos;
*****/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die Differenz des Forecast TV zu den aktuellen Opportunities des laufenden Jahres für die Kernsender an.
Forecast TV - Opportunities</inlineHelpText>
        <label>Gap Kernsender</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_ForecastDifferenzNeueSender__c</fullName>
        <description>Zeigt die Differenz des Forecast TV zu den aktuellen Opportunities des laufenden Jahres für die neuen Sendera an.
Forecast TV - Opportunities</description>
        <formula>SomTv_SummeForecastNeueSenderMN3__c - SomTv_OpptiAJNeueSender__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die Differenz des Forecast TV zu den aktuellen Opportunities des laufenden Jahres für die neuen Sendera an.
Forecast TV - Opportunities</inlineHelpText>
        <label>Gap Neue Sender</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_ForecastK1DokuMN3__c</fullName>
        <description>wird durch Rollup Helper befüllt</description>
        <label>Forecast K1 Doku MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_ForecastPro7MAXXMN3__c</fullName>
        <description>wird durch Rollup Helper befüllt</description>
        <label>Forecast Pro7 MAXX MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_ForecastSAT1GOLDMN3__c</fullName>
        <label>Forecast SAT.1 GOLD MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_ForecastsixxMN3__c</fullName>
        <description>wird durch Rollup Helper befüllt</description>
        <label>Forecast sixx MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_GeheZuOppListe__c</fullName>
        <description>Springe zur Liste der Opportunities dieses Accounts</description>
        <formula>HYPERLINK( &apos;/006?rlid=RelatedOpportunityList&amp;id=&apos; &amp; Id , &apos;Opportunity Liste&apos;, &apos;_blank&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Springe zur Liste der Opportunities dieses Accounts</inlineHelpText>
        <label>Gehe zu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Gruendungsjahr__c</fullName>
        <description>Jahr der Gründung</description>
        <inlineHelpText>Jahr der Gründung</inlineHelpText>
        <label>Gründungsjahr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_GruppeAT__c</fullName>
        <description>Auflistung von Gruppen, die den Accounts zugeordnet werden sollen (Österreich)</description>
        <inlineHelpText>Auflistung von Gruppen, die den Accounts zugeordnet werden sollen (Österreich)</inlineHelpText>
        <label>Gruppe AT</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top 10 Kunde</fullName>
                </value>
                <value>
                    <fullName>Top 20 Kunde</fullName>
                </value>
                <value>
                    <fullName>Top 30 Kunde</fullName>
                </value>
                <value>
                    <fullName>Top 50 Kunde</fullName>
                </value>
                <value>
                    <fullName>Top 100 Kunde</fullName>
                </value>
                <value>
                    <fullName>Top 200 Kunde</fullName>
                </value>
                <value>
                    <fullName>Top 10 Mediaagentur</fullName>
                </value>
                <value>
                    <fullName>Top 20 Mediaagentur</fullName>
                </value>
                <value>
                    <fullName>Kabelnetzbetreiber</fullName>
                </value>
                <value>
                    <fullName>Hersteller SAT</fullName>
                </value>
                <value>
                    <fullName>Hersteller TV</fullName>
                </value>
                <value>
                    <fullName>HD</fullName>
                </value>
                <value>
                    <fullName>Händler</fullName>
                </value>
                <value>
                    <fullName>Fachpresse</fullName>
                </value>
                <value>
                    <fullName>Mobilfunk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_HandelsregisternummerHRB__c</fullName>
        <description>Die Nummer des Unternehmens, die im Handelsregister geführt wird.</description>
        <inlineHelpText>Die Nummer des Unternehmens, die im Handelsregister geführt wird.</inlineHelpText>
        <label>Handelsregisternummer HRB</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_HilfsfeldProRexRolle__c</fullName>
        <description>wird per Trigger befüllt. Dient zur Aufnahme der ProRex Rollenwerte. Filter in AnsprechpartnerZustaendigkeit__r.Agentur__c und AnsprechpartnerZustaendigkeit__r.Kunde__c referenzieren auf dieses Hilfsfeld (Begründung: LookUp Filter können nicht auf MultiPicklist referenzieren)</description>
        <inlineHelpText>wird per Trigger befüllt. Dient zur Aufnahme der ProRex Rollenwerte. Filter in AnsprechpartnerZustaendigkeit__r.Agentur__c und AnsprechpartnerZustaendigkeit__r.Kunde__c referenzieren auf dieses Hilfsfeld</inlineHelpText>
        <label>HilfsfeldProRexRolle</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Information__c</fullName>
        <description>Erläuterungen für Delta von Forecast zu Opportunities</description>
        <inlineHelpText>Erläuterungen für Delta von Forecast zu Opportunities</inlineHelpText>
        <label>Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_OpenCreateForecastTV__c</fullName>
        <description>Link zum Erstellen eines neuen Forecast TV für das aktuelle Jahr oder zu vorhandenem Forecast TV - wird nur für Admin und 71M TV Sales angezeigt, sonst Hinweistext</description>
        <formula>IF ( AND ( $User.ProfileId != &apos;00e20000000lfOj&apos; , $User.ProfileId != &apos;00eD0000001QoiV&apos;) , &apos;Erstellt und pflegt TV Sales&apos; ,
  IF(
    ISBLANK( SomTv_AktuellerForecastTV__c ) ,
    HYPERLINK ( &apos;/a4E/e&apos;
        &amp; &apos;?Name=&apos; &amp; &apos;wird+automatisch+gefuellt&apos;
        &amp; &apos;&amp;00N57000006I8MD=&apos; &amp; TEXT ( YEAR( TODAY() ) )
        &amp; &apos;&amp;retURL=%2F&apos; &amp; Id
        &amp; &apos;&amp;CF00N57000006I8M2_lkid=&apos; &amp; Id
        &amp; &apos;&amp;CF00N57000006I8M2=&apos; &amp; Name
        &amp; &apos;&amp;CF00N570000063Wta_lkid=&apos; &amp; IF ( ISBLANK( P7S1_RelevantAgency__c ) , &quot;&quot; , P7S1_RelevantAgency__c )
        &amp; &apos;&amp;CF00N570000063Wta=&apos; &amp; IF ( ISBLANK( P7S1_RelevantAgency__c ) , &quot;&quot; , P7S1_RelevantAgency__r.Name )
        &amp; &apos;&amp;nooverride=&apos; &amp; &apos;true&apos;
      ,
      &apos;Erstelle Forecast TV für &apos; &amp; TEXT ( YEAR( TODAY() ) ) ,
      &apos;_blank&apos;
    ) ,
    HYPERLINK (  &apos;/a4E?rlid=00N57000006I8M2&amp;id=&apos; &amp; Id  , &apos;Übersicht für &apos; &amp; Name )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link für TV Sales zum Erstellen eines neuen Forecast TV für das aktuelle Jahr oder zu vorhandenem Forecast TV</inlineHelpText>
        <label>Forecast TV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiAJCommitment__c</fullName>
        <label>Opps Commitments Kernsender MN3</label>
        <summarizedField>Opportunity.P7S1_Mn3__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Jahr__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Commitment (TV)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Geschlossene und gewonnene, Rabatt freigegeben, In Briefing, Angebot abgegeben</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Plattform__c</field>
            <operation>equals</operation>
            <value>Kernsender</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiAJGesamt__c</fullName>
        <formula>SomTv_OpptiAJCommitment__c + SomTv_OpptiAJZubuchung__c + SomTv_OpptiAJPaket__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe Opps Kernsender MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiAJNeueSender__c</fullName>
        <description>Summe der Opportunities der neuen Sender MN3</description>
        <formula>SomTv_Opptisixx__c + SomTv_OpptiSat1GOLD__c + SomTv_OpptiP7MAXX__c + SomTv_OpptiK1Doku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe Opps Neue Sender MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiAJPaket__c</fullName>
        <label>Opps Pakete Kernsender MN3</label>
        <summarizedField>Opportunity.P7S1_Mn3__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Jahr__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paket (TV)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Geschlossene und gewonnene, Rabatt freigegeben, In Briefing, Angebot abgegeben</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Plattform__c</field>
            <operation>equals</operation>
            <value>Kernsender</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiAJZubuchung__c</fullName>
        <label>Opps Zubuchungen Kernsender MN3</label>
        <summarizedField>Opportunity.P7S1_Mn3__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Jahr__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Zubuchung (TV)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Geschlossene und gewonnene, Rabatt freigegeben, In Briefing, Angebot abgegeben</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Plattform__c</field>
            <operation>equals</operation>
            <value>Kernsender</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiK1Doku__c</fullName>
        <description>wird durch Rollup Helper befüllt</description>
        <label>Opportunities K1 Doku MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiP7MAXX__c</fullName>
        <label>Opportunities P7 MAXX MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiSat1GOLD__c</fullName>
        <label>Opportunities Sat.1 GOLD MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiVJCommitment__c</fullName>
        <label>Opps Commitments Kernsender Vorjahr MN3</label>
        <summarizedField>Opportunity.P7S1_Mn3__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Jahr__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Commitment (TV)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Geschlossene und gewonnene</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.SomTv_Plattform__c</field>
            <operation>equals</operation>
            <value>Kernsender</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiVJGesamt__c</fullName>
        <formula>SomTv_OpptiVJCommitment__c + SomTv_OpptiVJZubuchung__c + SomTv_OpptiVJPaket__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe Opps Kernsender Vorjahr MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OpptiVJK1Doku__c</fullName>
        <description>wird durch Rollup Helper befüllt</description>
        <label>Opportunities K1 Doku Vorjahr MN3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>